[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Screens/Notes.gd" type="Script" id=1]
[ext_resource path="res://Assets/Prefab/Done_Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Prefab/Detail_Theme.tres" type="Theme" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Focus"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -1080.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:margin_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[node name="Notes" type="Control"]
anchor_right = 1.0
rect_min_size = Vector2( 1080, 1080 )
theme = ExtResource( 4 )
script = ExtResource( 1 )

[node name="TextureButton" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -500.0
margin_right = 500.0
margin_bottom = 500.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Done_Button" parent="VBoxContainer" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 540.0
margin_top = 0.0
margin_right = 540.0
margin_bottom = 215.0
size_flags_horizontal = 6
size_flags_vertical = 7
size_flags_stretch_ratio = 0.25

[node name="Note" type="TextEdit" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 219.0
margin_right = 1080.0
margin_bottom = 1080.0
focus_mode = 1
size_flags_horizontal = 3
size_flags_vertical = 3
text = "In the Name of AllahIn the Name of AllahIn the Name of AllahIn the Name of AllahIn the Name of AllahIn the Name of AllahIn the Name of AllahIn the Name of AllahIn the Name of AllahIn the Name of AllahIn the Name of AllahIn the Name of AllahIn the Name of AllahIn the Name of AllahIn the Name of AllahIn the Name of AllahIn the Name of AllahIn the Name of AllahIn the Name of AllahIn the Name of AllahIn the Name of AllahIn the Name of AllahIn the Name of AllahIn the Name of AllahIn the Name of AllahIn the Name of AllahIn the Name of AllahIn the Name of AllahIn the Name of Allah"
draw_tabs = true
bookmark_gutter = true
wrap_enabled = true
caret_blink = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Focus = SubResource( 1 )
anims/RESET = SubResource( 2 )

[connection signal="button_down" from="TextureButton" to="." method="_on_button_down"]
[connection signal="button_down" from="VBoxContainer/Done_Button" to="." method="_on_Done_Button_Clicked"]
[connection signal="focus_entered" from="VBoxContainer/Note" to="." method="_on_Note_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/Note" to="." method="_on_Note_focus_exited"]
